# libsxs

./: AUTHORS  COPYING  ChangeLog  Doxyfile  README  bootstrap.sh  clean_bootstrap.sh  configure.ac
scripts/: both_errs.in  build_sxs_error_files.py  common.sh  mac_errs.in  sxs_errs.in  unix_errs.in  unix_herrs.in  unixmac_errs.in  win_errs.in
src/: Makefile.am  sxs.c  sxs.h  sxs_error.c  sxs_error.h  sxs_export.h  sxs_types.h
